fix user area/chat bar alignment

--- a/betterdiscord/app.css
+++ b/betterdiscord/app.css
@@ -234,7 +234,7 @@
   left: 0;
   transform: translateX(91px);
   width: calc(100% - 91px);
-  padding: 10px 8px;
+  padding: 8px 8px;
   background: var(--background-secondary);
 }
 
