--- a/src/theme/sidebar/_userPanel.scss
+++ b/src/theme/sidebar/_userPanel.scss
@@ -12,7 +12,7 @@
   // transition:
   //   transform 0.2s ease-out,
   //   width 0.2s ease-out;
-  padding: 10px 8px;
+  padding: 8px 8px;
   background: var(--background-secondary);
 }
 
